a14-may-6/despliegue_manual/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-api
  namespace: clase14
spec:
  type: ClusterIP
  selector:
    app: mi-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
