a14-may-6/despliegue_manual/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-api
  namespace: clase14
spec:
  rules:
    - host: mi-api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mi-api
                port:
                  number: 80
